parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { document: peg$parsedocument },
        peg$startRuleFunction  = peg$parsedocument,

        peg$c0 = peg$FAILED,
        peg$c1 = null,
        peg$c2 = [],
        peg$c3 = function(s) {
            return s.map(function(d) { return d[0] })
          },
        peg$c4 = function(c) {
            return {
              type: 'comment',
              value: c
            }
          },
        peg$c5 = void 0,
        peg$c6 = function(r, c) {
            r.comment = c
            return [r]
          },
        peg$c7 = function(h, c, t) {
            h.comment = c
            return [h].concat(t.map(function(d) {
              d[2].comment = d[3]
              return d[2]
            }))
          },
        peg$c8 = "::",
        peg$c9 = { type: "literal", value: "::", description: "\"::\"" },
        peg$c10 = function(p, a) {
            return {
              type: 'hat',
              parts: p,
              annotations: a
            }
          },
        peg$c11 = "when",
        peg$c12 = { type: "literal", value: "when", description: "\"when\"" },
        peg$c13 = "clicked",
        peg$c14 = { type: "literal", value: "clicked", description: "\"clicked\"" },
        peg$c15 = function(p) {
            return {
              type: 'hat',
              parts: se(p)
            }
          },
        peg$c16 = "key",
        peg$c17 = { type: "literal", value: "key", description: "\"key\"" },
        peg$c18 = "pressed",
        peg$c19 = { type: "literal", value: "pressed", description: "\"pressed\"" },
        peg$c20 = "this",
        peg$c21 = { type: "literal", value: "this", description: "\"this\"" },
        peg$c22 = "sprite",
        peg$c23 = { type: "literal", value: "sprite", description: "\"sprite\"" },
        peg$c24 = "backdrop",
        peg$c25 = { type: "literal", value: "backdrop", description: "\"backdrop\"" },
        peg$c26 = "switches",
        peg$c27 = { type: "literal", value: "switches", description: "\"switches\"" },
        peg$c28 = "to",
        peg$c29 = { type: "literal", value: "to", description: "\"to\"" },
        peg$c30 = ">",
        peg$c31 = { type: "literal", value: ">", description: "\">\"" },
        peg$c32 = "I",
        peg$c33 = { type: "literal", value: "I", description: "\"I\"" },
        peg$c34 = "receive",
        peg$c35 = { type: "literal", value: "receive", description: "\"receive\"" },
        peg$c36 = "define",
        peg$c37 = { type: "literal", value: "define", description: "\"define\"" },
        peg$c38 = function(l, p) {
            return {
              type: 'define',
              parts: [l, p]
            }
          },
        peg$c39 = "gf",
        peg$c40 = { type: "literal", value: "gf", description: "\"gf\"" },
        peg$c41 = "flag",
        peg$c42 = { type: "literal", value: "flag", description: "\"flag\"" },
        peg$c43 = "green",
        peg$c44 = { type: "literal", value: "green", description: "\"green\"" },
        peg$c45 = "@green-flag",
        peg$c46 = { type: "literal", value: "@green-flag", description: "\"@green-flag\"" },
        peg$c47 = "(",
        peg$c48 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c49 = ")",
        peg$c50 = { type: "literal", value: ")", description: "\")\"" },
        peg$c51 = function(b) {
            return {
              type: 'reporter',
              parts: b.parts,
              annotations: b.annotations
            }
          },
        peg$c52 = "<",
        peg$c53 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c54 = function(b) {
            return {
              type: 'boolean',
              parts: b.parts,
              annotations: b.annotations
            }
          },
        peg$c55 = "\u2329",
        peg$c56 = { type: "literal", value: "\u2329", description: "\"\\u2329\"" },
        peg$c57 = "\u232A",
        peg$c58 = { type: "literal", value: "\u232A", description: "\"\\u232A\"" },
        peg$c59 = function(p, a) {
            return {
              parts: p,
              annotations: a || []
            }
          },
        peg$c60 = function(a) { return a },
        peg$c61 = function(h, t) { return list(h, t) },
        peg$c62 = function(l) { return l },
        peg$c63 = "//",
        peg$c64 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c65 = /^[^}>)\] \t\r\n]/,
        peg$c66 = { type: "class", value: "[^}>)\\] \\t\\r\\n]", description: "[^}>)\\] \\t\\r\\n]" },
        peg$c67 = function(c) { return c },
        peg$c68 = function(c) {
            return {
              type: 'number',
              value: c
            }
          },
        peg$c69 = /^[0-9.e\-]/,
        peg$c70 = { type: "class", value: "[0-9.e\\-]", description: "[0-9.e\\-]" },
        peg$c71 = function() {
            return {
              type: 'boolean'
            }
          },
        peg$c72 = "[",
        peg$c73 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c74 = "]",
        peg$c75 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c76 = function(c) {
            return {
              type: 'color',
              value: c
            }
          },
        peg$c77 = "#",
        peg$c78 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c79 = /^[0-9a-f]/i,
        peg$c80 = { type: "class", value: "[0-9a-f]i", description: "[0-9a-f]i" },
        peg$c81 = " v",
        peg$c82 = { type: "literal", value: " v", description: "\" v\"" },
        peg$c83 = function(c) {
            return {
              type: 'number',
              dropdown: true,
              value: c
            }
          },
        peg$c84 = /^[^\]]/,
        peg$c85 = { type: "class", value: "[^\\]]", description: "[^\\]]" },
        peg$c86 = function(c) {
            return {
              type: 'string',
              dropdown: true,
              value: c
            }
          },
        peg$c87 = function(c) {
            return {
              type: 'string',
              value: c
            }
          },
        peg$c88 = "hat",
        peg$c89 = { type: "literal", value: "hat", description: "\"hat\"" },
        peg$c90 = /^[ \t\r\n\])>]/,
        peg$c91 = { type: "class", value: "[ \\t\\r\\n\\])>]", description: "[ \\t\\r\\n\\])>]" },
        peg$c92 = /^[^ \t\r\n\])>]/,
        peg$c93 = { type: "class", value: "[^ \\t\\r\\n\\])>]", description: "[^ \\t\\r\\n\\])>]" },
        peg$c94 = /^[^\r\n]/,
        peg$c95 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c96 = /^[ \t]/,
        peg$c97 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c98 = /^[\r\n]/,
        peg$c99 = { type: "class", value: "[\\r\\n]", description: "[\\r\\n]" },
        peg$c100 = { type: "any", description: "any character" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$cache = {},
        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsedocument() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 30 + 0,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseWS();
      if (s1 === peg$FAILED) {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parsescript();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseWS();
          if (s5 === peg$FAILED) {
            s5 = peg$c1;
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$c0;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parsescript();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseWS();
            if (s5 === peg$FAILED) {
              s5 = peg$c1;
            }
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c3(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsescript() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      var key    = peg$currPos * 30 + 1,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parsecomment();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c4(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsereporter();
        if (s1 !== peg$FAILED) {
          s2 = peg$parsecomment();
          if (s2 === peg$FAILED) {
            s2 = peg$c1;
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$currPos;
            peg$silentFails++;
            s4 = peg$parseNL();
            if (s4 === peg$FAILED) {
              s4 = peg$parseEOF();
            }
            peg$silentFails--;
            if (s4 !== peg$FAILED) {
              peg$currPos = s3;
              s3 = peg$c5;
            } else {
              s3 = peg$c0;
            }
            if (s3 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c6(s1, s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsehat();
          if (s1 === peg$FAILED) {
            s1 = peg$parseblock();
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parsecomment();
            if (s2 === peg$FAILED) {
              s2 = peg$c1;
            }
            if (s2 !== peg$FAILED) {
              s3 = [];
              s4 = peg$currPos;
              s5 = peg$parseWS();
              if (s5 !== peg$FAILED) {
                s6 = peg$currPos;
                peg$silentFails++;
                s7 = peg$parsehat();
                peg$silentFails--;
                if (s7 === peg$FAILED) {
                  s6 = peg$c5;
                } else {
                  peg$currPos = s6;
                  s6 = peg$c0;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseblock();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parsecomment();
                    if (s8 === peg$FAILED) {
                      s8 = peg$c1;
                    }
                    if (s8 !== peg$FAILED) {
                      s5 = [s5, s6, s7, s8];
                      s4 = s5;
                    } else {
                      peg$currPos = s4;
                      s4 = peg$c0;
                    }
                  } else {
                    peg$currPos = s4;
                    s4 = peg$c0;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$c0;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
              while (s4 !== peg$FAILED) {
                s3.push(s4);
                s4 = peg$currPos;
                s5 = peg$parseWS();
                if (s5 !== peg$FAILED) {
                  s6 = peg$currPos;
                  peg$silentFails++;
                  s7 = peg$parsehat();
                  peg$silentFails--;
                  if (s7 === peg$FAILED) {
                    s6 = peg$c5;
                  } else {
                    peg$currPos = s6;
                    s6 = peg$c0;
                  }
                  if (s6 !== peg$FAILED) {
                    s7 = peg$parseblock();
                    if (s7 !== peg$FAILED) {
                      s8 = peg$parsecomment();
                      if (s8 === peg$FAILED) {
                        s8 = peg$c1;
                      }
                      if (s8 !== peg$FAILED) {
                        s5 = [s5, s6, s7, s8];
                        s4 = s5;
                      } else {
                        peg$currPos = s4;
                        s4 = peg$c0;
                      }
                    } else {
                      peg$currPos = s4;
                      s4 = peg$c0;
                    }
                  } else {
                    peg$currPos = s4;
                    s4 = peg$c0;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$c0;
                }
              }
              if (s3 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c7(s1, s2, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsehat() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      var key    = peg$currPos * 30 + 2,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseparts();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c8) {
          s2 = peg$c8;
          peg$currPos += 2;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseS();
          if (s3 === peg$FAILED) {
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsehat_annotations();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c10(s1, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$currPos;
        s2 = peg$parseargs();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 4) === peg$c11) {
            s3 = peg$c11;
            peg$currPos += 4;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseargs();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsegreen_flag();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseargs();
                if (s6 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 7) === peg$c13) {
                    s7 = peg$c13;
                    peg$currPos += 7;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c14); }
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseargs();
                    if (s8 !== peg$FAILED) {
                      s2 = [s2, s3, s4, s5, s6, s7, s8];
                      s1 = s2;
                    } else {
                      peg$currPos = s1;
                      s1 = peg$c0;
                    }
                  } else {
                    peg$currPos = s1;
                    s1 = peg$c0;
                  }
                } else {
                  peg$currPos = s1;
                  s1 = peg$c0;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
        if (s1 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c15(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$currPos;
          s2 = peg$parseargs();
          if (s2 !== peg$FAILED) {
            if (input.substr(peg$currPos, 4) === peg$c11) {
              s3 = peg$c11;
              peg$currPos += 4;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c12); }
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parseargs();
              if (s4 !== peg$FAILED) {
                if (input.substr(peg$currPos, 3) === peg$c16) {
                  s5 = peg$c16;
                  peg$currPos += 3;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c17); }
                }
                if (s5 !== peg$FAILED) {
                  s6 = peg$parseargs();
                  if (s6 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 7) === peg$c18) {
                      s7 = peg$c18;
                      peg$currPos += 7;
                    } else {
                      s7 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c19); }
                    }
                    if (s7 !== peg$FAILED) {
                      s8 = peg$parseargs();
                      if (s8 !== peg$FAILED) {
                        s2 = [s2, s3, s4, s5, s6, s7, s8];
                        s1 = s2;
                      } else {
                        peg$currPos = s1;
                        s1 = peg$c0;
                      }
                    } else {
                      peg$currPos = s1;
                      s1 = peg$c0;
                    }
                  } else {
                    peg$currPos = s1;
                    s1 = peg$c0;
                  }
                } else {
                  peg$currPos = s1;
                  s1 = peg$c0;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
          if (s1 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c15(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$currPos;
            s2 = peg$parseargs();
            if (s2 !== peg$FAILED) {
              if (input.substr(peg$currPos, 4) === peg$c11) {
                s3 = peg$c11;
                peg$currPos += 4;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c12); }
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$parseargs();
                if (s4 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 4) === peg$c20) {
                    s5 = peg$c20;
                    peg$currPos += 4;
                  } else {
                    s5 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c21); }
                  }
                  if (s5 !== peg$FAILED) {
                    s6 = peg$parseargs();
                    if (s6 !== peg$FAILED) {
                      if (input.substr(peg$currPos, 6) === peg$c22) {
                        s7 = peg$c22;
                        peg$currPos += 6;
                      } else {
                        s7 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c23); }
                      }
                      if (s7 !== peg$FAILED) {
                        s8 = peg$parseargs();
                        if (s8 !== peg$FAILED) {
                          if (input.substr(peg$currPos, 7) === peg$c13) {
                            s9 = peg$c13;
                            peg$currPos += 7;
                          } else {
                            s9 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c14); }
                          }
                          if (s9 !== peg$FAILED) {
                            s10 = peg$parseargs();
                            if (s10 !== peg$FAILED) {
                              s2 = [s2, s3, s4, s5, s6, s7, s8, s9, s10];
                              s1 = s2;
                            } else {
                              peg$currPos = s1;
                              s1 = peg$c0;
                            }
                          } else {
                            peg$currPos = s1;
                            s1 = peg$c0;
                          }
                        } else {
                          peg$currPos = s1;
                          s1 = peg$c0;
                        }
                      } else {
                        peg$currPos = s1;
                        s1 = peg$c0;
                      }
                    } else {
                      peg$currPos = s1;
                      s1 = peg$c0;
                    }
                  } else {
                    peg$currPos = s1;
                    s1 = peg$c0;
                  }
                } else {
                  peg$currPos = s1;
                  s1 = peg$c0;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
            if (s1 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c15(s1);
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$currPos;
              s2 = peg$parseargs();
              if (s2 !== peg$FAILED) {
                if (input.substr(peg$currPos, 4) === peg$c11) {
                  s3 = peg$c11;
                  peg$currPos += 4;
                } else {
                  s3 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c12); }
                }
                if (s3 !== peg$FAILED) {
                  s4 = peg$parseargs();
                  if (s4 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 8) === peg$c24) {
                      s5 = peg$c24;
                      peg$currPos += 8;
                    } else {
                      s5 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c25); }
                    }
                    if (s5 !== peg$FAILED) {
                      s6 = peg$parseargs();
                      if (s6 !== peg$FAILED) {
                        if (input.substr(peg$currPos, 8) === peg$c26) {
                          s7 = peg$c26;
                          peg$currPos += 8;
                        } else {
                          s7 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c27); }
                        }
                        if (s7 !== peg$FAILED) {
                          s8 = peg$parseargs();
                          if (s8 !== peg$FAILED) {
                            if (input.substr(peg$currPos, 2) === peg$c28) {
                              s9 = peg$c28;
                              peg$currPos += 2;
                            } else {
                              s9 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c29); }
                            }
                            if (s9 !== peg$FAILED) {
                              s10 = peg$parseargs();
                              if (s10 !== peg$FAILED) {
                                s2 = [s2, s3, s4, s5, s6, s7, s8, s9, s10];
                                s1 = s2;
                              } else {
                                peg$currPos = s1;
                                s1 = peg$c0;
                              }
                            } else {
                              peg$currPos = s1;
                              s1 = peg$c0;
                            }
                          } else {
                            peg$currPos = s1;
                            s1 = peg$c0;
                          }
                        } else {
                          peg$currPos = s1;
                          s1 = peg$c0;
                        }
                      } else {
                        peg$currPos = s1;
                        s1 = peg$c0;
                      }
                    } else {
                      peg$currPos = s1;
                      s1 = peg$c0;
                    }
                  } else {
                    peg$currPos = s1;
                    s1 = peg$c0;
                  }
                } else {
                  peg$currPos = s1;
                  s1 = peg$c0;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
              if (s1 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c15(s1);
              }
              s0 = s1;
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$currPos;
                s2 = peg$parseargs();
                if (s2 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 4) === peg$c11) {
                    s3 = peg$c11;
                    peg$currPos += 4;
                  } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c12); }
                  }
                  if (s3 !== peg$FAILED) {
                    s4 = peg$parseargs();
                    if (s4 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 62) {
                        s5 = peg$c30;
                        peg$currPos++;
                      } else {
                        s5 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c31); }
                      }
                      if (s5 !== peg$FAILED) {
                        s6 = peg$parseargs();
                        if (s6 !== peg$FAILED) {
                          s2 = [s2, s3, s4, s5, s6];
                          s1 = s2;
                        } else {
                          peg$currPos = s1;
                          s1 = peg$c0;
                        }
                      } else {
                        peg$currPos = s1;
                        s1 = peg$c0;
                      }
                    } else {
                      peg$currPos = s1;
                      s1 = peg$c0;
                    }
                  } else {
                    peg$currPos = s1;
                    s1 = peg$c0;
                  }
                } else {
                  peg$currPos = s1;
                  s1 = peg$c0;
                }
                if (s1 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  s1 = peg$c15(s1);
                }
                s0 = s1;
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = peg$currPos;
                  s2 = peg$parseargs();
                  if (s2 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 4) === peg$c11) {
                      s3 = peg$c11;
                      peg$currPos += 4;
                    } else {
                      s3 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c12); }
                    }
                    if (s3 !== peg$FAILED) {
                      s4 = peg$parseargs();
                      if (s4 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 73) {
                          s5 = peg$c32;
                          peg$currPos++;
                        } else {
                          s5 = peg$FAILED;
